--- a/src/scss/components/divider/_variables.scss
+++ b/src/scss/components/divider/_variables.scss
@@ -1,16 +1,2 @@
-$divider-border-color: var(--color-border) !default;
+$divider-border-color: var(--color-default-lt) !default;
 $divider-border-width: var(--border-width-base) !default;
-$divider-sizes: (
-  "1": (
-    "font-size": "sm", "gap": "3", "margin": "1"
-  ),
-  "2": (
-    "font-size": "sm", "gap": "3", "margin": "2"
-  ),
-  "3": (
-    "font-size": "sm", "gap": "3", "margin": "3",
-  ),
-  "4": (
-    "font-size": "sm", "gap": "3", "margin": "4",
-  )
-) !default;
