--- a/src/scss/components/alert/_variables.scss
+++ b/src/scss/components/alert/_variables.scss
@@ -2,10 +2,10 @@ $alert-border-radius: var(--border-radius-base);
 $alert-border-width: var(--border-width-base);
 $alert-sizes: (
   "sm": (
-    "gap": "1", "padding": "3"
+    "padding-x": "3", "padding-y": "3"
   ),
   "base": (
-    "gap": "1", "padding": "4"
+    "padding-x": "4", "padding-y": "4"
   )
 ) !default;
 $alert-patterns: ("solid", "subtle") !default;
