--- a/src/scss/components/avatar/_base.scss
+++ b/src/scss/components/avatar/_base.scss
@@ -21,7 +21,7 @@
   box-sizing: border-box;
   display: inline-flex;
 
-  > * {
+  > .avatar {
     &:not(:first-child) {
       margin-left: -0.5rem;
     }
