--- a/src/scss/components/drawer/_variables.scss
+++ b/src/scss/components/drawer/_variables.scss
@@ -2,7 +2,7 @@ $drawer-patterns: ("solid", "subtle") !default;
 $drawer-placements: (
   "top", "right", "bottom", "left"
 ) !default;
-$drawer-sizes: (
+$drawer-widths: (
   "xs": (
     "min-width": "20", "width": "20"
   ),
